# ShellFile_v0.1

./: .gitignore  Cargo.toml  README.md  about.md  build.rs  generate_keys.py
config/: config.json
installer/: shellfile.nsi
keys/: hashes.txt
src/: main.rs
src/core/: file_creator.rs  mod.rs  project_generator.rs  template_loader.rs
src/licensing/: license_validator.rs  mod.rs
src/windows/: integration.rs
templates/: json.tpl  md.tpl  py.tpl
