[package]
name = "shellfile"
version = "1.0.0"
edition = "2021"
authors = ["ShellFile Developer"]
description = "Create files instantly from the Windows right-click menu."

[dependencies]
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.52"
is_elevated = "0.1"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
